# wingman

./: .gitignore  LICENSE  README.md
wingman-mcp/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.bundled  Dockerfile.bundled.dockerignore  INGEST_MACOS.md  README.md  pyproject.toml
wingman-mcp/docs/superpowers/plans/: 2026-04-25-multi-product-api-references-plan.md  2026-04-25-multi-product-release-notes-plan.md
wingman-mcp/docs/superpowers/specs/: 2026-04-25-multi-product-rag-ingest-design.md
wingman-mcp/scripts/: build_release.sh  copy_stores.sh
wingman-mcp/skills/script-author/: SKILL.md
wingman-mcp/skills/script-author/references/: idempotence-patterns.md  json-template.md  library.md
wingman-mcp/skills/sensor-author/: SKILL.md
wingman-mcp/skills/sensor-author/references/: library.md  response-types.md
wingman-mcp/src/wingman_mcp/: __init__.py  access_api.py  api_client.py  app_volumes_api.py  auth.py  cli.py  config.py  credentials.py  embeddings.py  export.py  horizon_api.py  horizon_cloud_api.py  identity_service_api.py  middleware.py  migration.py  request_context.py  search.py  server.py  uem_api.py
wingman-mcp/src/wingman_mcp/ingest/: check.py  ingest_api.py  ingest_api_pdf.py  ingest_docs.py  ingest_release_notes.py  products.py
wingman-mcp/tests/: conftest.py  test_api_pdf_helpers.py  test_check_release_notes.py  test_openapi_walker.py  test_products_api_config.py  test_products_release_notes_config.py  test_release_notes_ingest_helpers.py  test_version_expansion.py
