[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wingman-mcp"
version = "0.3.1"
description = "MCP server providing Workspace ONE UEM documentation search via local RAG"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "langchain-chroma>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "keyring>=25.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
ingest = [
    "requests",
    "beautifulsoup4",
    "tqdm",
    "python-dotenv",
]

[project.scripts]
wingman-mcp = "wingman_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wingman_mcp"]
exclude = [
  "src/wingman_mcp/ingest",
]
